Update footer layout

--- a/WahanaTest/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WahanaTest/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -146,7 +146,7 @@
         @RenderBody()
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright &copy; @DateTime.Now.Year </strong>Alex-Theme. All rights
+            <strong>Copyright &copy; @DateTime.Now.Year </strong>All rights
             reserved.
         </footer>
 
