--- a/WahanaTest/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WahanaTest/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -129,15 +129,6 @@
 
                             </ul>
                         </li>
-                        @*@Html.Raw(ViewBag.MenuList)*@
-                        @if (ViewBag.IsAdmin == true)
-                        {
-                            <li class="header">ADMIN MENU</li>
-                            <li><a href="/admin/user"><i class="fa fa-users"></i> <span>User</span></a></li>
-                            <li><a href="/admin/role"><i class="fa fa-registered"></i> <span>Role</span></a></li>
-                            <li><a href="/admin/module"><i class="fa fa-server"></i> <span>Module</span></a></li>
-                            <li><a href="/admin/setting"><i class="fa fa-gear"></i> <span>Setting</span></a></li>
-                        }
                     </ul>
                 </div>
             </section>
@@ -159,42 +150,24 @@
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
-    <!-- Bootstrap 3.3.5 -->
     <script src="/Content/assets/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Morris.js charts -->
     <script src="/Content/assets/plugins/raphael/raphael-min.js"></script>
     <script src="/Content/assets/plugins/morris/morris.min.js"></script>
-    <!-- Sparkline -->
     <script src="/Content/assets/plugins/sparkline/jquery.sparkline.min.js"></script>
-    <!-- jvectormap -->
     <script src="/Content/assets/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="/Content/assets/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- jQuery Knob Chart -->
     <script src="/Content/assets/plugins/knob/jquery.knob.js"></script>
-    <!-- daterangepicker -->
     <script src="/Content/assets/plugins/moment/moment.min.js"></script>
-    @*<script src="/Content/assets/plugins/daterangepicker/daterangepicker.js"></script>*@
     <script src="/Content/assets/plugins/daterangepicker/daterangepicker.js"></script>
-    <!-- datepicker -->
     <script src="/Content/assets/plugins/datepicker/bootstrap-datepicker.js"></script>
-    <!-- Bootstrap WYSIHTML5 -->
     <script src="/Content/assets/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
-    <!-- Slimscroll -->
     <script src="/Content/assets/plugins/slimScroll/jquery.slimscroll.min.js"></script>
-    <!-- iCheck 1.0.1 -->
-    <script src="/Content/assets/plugins/iCheck/icheck.min.js">
-    </script> <!-- seelct2 -->
+    <script src="/Content/assets/plugins/iCheck/icheck.min.js"></script> 
     <script src="~/Content/assets/plugins/select2/select2.min.js"></script>
-    <!-- FastClick -->
     <script src="/Content/assets/plugins/fastclick/fastclick.js"></script>
-    <!-- AdminLTE App -->
     <script src="/Content/assets/dist/js/app.min.js"></script>
-    <!-- ChartJS 1.0.1 -->
     <script src="/Content/assets/plugins/chartjs/Chart.min.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <!-- AdminLTE for demo purposes -->
     <script src="/Content/assets/dist/js/demo.js"></script>
-    <!-- DataTables -->
     <script src="/Content/assets/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="/Content/assets/plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script src="/Content/assets/plugins/underscore/underscore-min.js"></script>
