--- a/WahanaTest/Areas/Admin/Views/Barang/Index.cshtml
+++ b/WahanaTest/Areas/Admin/Views/Barang/Index.cshtml
@@ -253,7 +253,7 @@
             id = data.id;
 
             $("#_popUp").modal({ backdrop: 'static' });
-            $('#_title').text("Hapus User");
+            $('#_title').text("Hapus Barang");
 
             $("#id").val(data.id);
             $("#nama").val(data.nama);
