--- a/WahanaTest/Areas/Admin/Views/Barang/Index.cshtml
+++ b/WahanaTest/Areas/Admin/Views/Barang/Index.cshtml
@@ -31,7 +31,7 @@
         </h1>
         <ol class="breadcrumb">
             <li><a href="/admin/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">User</li>
+            <li class="active">Barang</li>
         </ol>
     </section>
     <!-- Main content -->
